# prediction-market-trading-bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
.claude/: sprint-brief-template.md
.claude/skills/pm-compound/: SKILL.md
.claude/skills/pm-predict/: SKILL.md
.claude/skills/pm-research/: SKILL.md
.claude/skills/pm-risk/: SKILL.md
.claude/skills/pm-scan/: SKILL.md
.github/workflows/: ci.yml
docs/: AI_COLLABORATION.md  RUNBOOK.md
scripts/: paper-daemon
src/bot/: __init__.py  budgets.py  config.py  daemon.py  metrics.py  mock_data.py  orchestrator.py  skills.py
tests/: test_adaptive_kelly.py  test_api_spend.py  test_backtest.py  test_brier_score.py  test_budgets.py  test_check_retrain.py  test_compound.py  test_compound_bankroll.py  test_confidence_gate.py  test_config.py  test_config_validation.py  test_consecutive_loss_halt.py  test_daemon.py  test_daily_gain_cap.py  test_drawdown_from_pnl.py  test_edge_shrinkage.py  test_fetch_resolved_markets.py  test_kelly_size.py  test_market_cooldown.py  test_market_dedup.py  test_market_ranking.py  test_market_scoring.py  test_max_daily_trades.py  test_metrics.py  test_metrics_persistence.py  test_momentum.py  test_narrative_score.py  test_one_position_per_market.py  test_orchestrator.py  test_orderbook_staleness.py  test_paper_simulator.py  test_partial_fill.py  test_polymarket_client.py  test_position_timeout.py  test_predict_skill.py  test_recent_win_rate.py  test_research_skill.py  test_retrain.py  test_run_summary_log.py  test_scan_fetch_limit.py  (+17 more)
(+30 files in other folders)
